--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
       "php": "^7.3",
       "coffeecode/router": "1.0.*",
-      "league/plates": "v4.0.0-alpha"
+      "league/plates": "v4.0.0-alpha",
+      "phpmailer/phpmailer": "6.0.7"
     }
   }
